# Askit.

./: .gitignore  ARCHITECTURE.md  Manual.md  Manual_EN.md  PAskit-Setup.spec  PAskit.spec  README.md  README_CN.md  SYSTEM_PROMPT_V3.md  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
.github/workflows/: build.yml
Others/: INSTALLER_GUIDE.md  LICENSING.md  PACKAGING.md  QUICK_START.md
docs/: 用户手册.md
scripts/: PAskit-Setup.spec  build.py  build_gui_installer.py  convert_icon.py  create_icon.py  create_installer.py  create_msi.py  create_simple_installer.py  generate_activation_code.py  generate_competition_codes.py  generate_student_codes.py  gui_installer.py
src/: main.py
src/ai/: __init__.py  anthropic_provider.py  code_parser.py  manim_prompt_builder.py  openai_provider.py  provider_base.py
src/controls/: __init__.py  control_manager.py
src/core/: __init__.py  config.py  events.py  logger.py  types.py
src/execution/: __init__.py  manim_executor.py
src/gui/: __init__.py  activation_dialog.py  animations.py  chat_panel.py  latex_renderer.py  main_window.py  settings_dialog.py
src/gui/styles/: __init__.py
src/gui/widgets/: __init__.py  animation_timeline.py  control_panel.py  hud_overlay.py  title_bar.py
src/licensing/: __init__.py  license_manager.py
src/manim_bridge/: __init__.py  animation_timeline.py  scene_wrapper.py
src/physics/: __init__.py  manim_physics.py  physics_bridge.py
src/session/: __init__.py  session.py  storage.py
src/utils/: __init__.py
