[project]
name = "paskit"
version = "0.1.0"
description = "AI-powered interactive teaching software for math and physics"
requires-python = ">=3.11"
authors = [
    {name = "PAskit Team"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "education", "visualization", "opengl", "teaching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "PyQt6>=6.6.1",
    "PyOpenGL>=3.1.7",
    "PyOpenGL-accelerate>=3.1.7",
    "numpy>=1.26.3",
    "scipy>=1.11.4",
    "openai>=1.7.2",
    "anthropic>=0.8.1",
    "httpx>=0.26.0",
    "pydantic>=2.5.3",
    "msgpack>=1.0.7",
    "freetype-py>=2.4.0",
    "Pillow>=10.2.0",
    "Pygments>=2.17.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-qt>=4.3.1",
    "pytest-asyncio>=0.23.3",
    "black>=23.12.1",
    "mypy>=1.8.0",
    "ruff>=0.1.11",
]

[project.scripts]
paskit = "src.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
